@@ -1,0 +1,10 @@
+<header>Master DNS server hostname</header>
+
+By default, Virtualmin will use the system's hostname in the primary NS
+record for new DNS domains it creates. However, if the hostname does is not
+a valid DNS name or it not suitable for your purposes, this option can
+be used to enter a different primary nameserver. If <b>must</b> resolve
+to the externally accessible IP address of your system though. <p>
+
+<footer>
+
