@@ -2135,6 +2135,10 @@ tmpl_resellers=Available to resellers
 tmpl_resellers_all=All resellers
 tmpl_resellers_sel=Only selected ..
 tmpl_resellers_none=None
+tmpl_dnsmaster=Master DNS server hostname
+tmpl_ednsmaster=Missing or invalid master DNS server hostname
+tmpl_dnsmnames=Hostname
+tmpl_dnsmauto=Automatic (from system's hostname)
 tmpl_spf=Add SPF DNS record?
 tmpl_spfyes=Yes, with server's IP address
 tmpl_spfhosts=Additional SPF IPs and hostnames
